# embedded_book

./: .editorconfig
chapter_1/c/: CMakeLists.txt
chapter_1/c/cmake/: arm-gnu-toolchain.cmake
chapter_1/c/src/app/: CMakeLists.txt  main.c
chapter_1/c/src/platform/arch/: CMakeLists.txt
chapter_1/c/src/platform/arch/microbit/: hal_gpio.c  hal_timer.c
chapter_1/c/src/platform/arch/microbit/crt/: linker-script-microbit.ld  startup.c
chapter_1/c/src/platform/arch/nucleo_l476rg/: CMakeLists.txt  hal_gpio.c  hal_timer.c
chapter_1/c/src/platform/arch/nucleo_l476rg/crt/: linker-script-stm32l476rg.ld  startup.c
chapter_1/c/src/platform/hal/: CMakeLists.txt
chapter_1/c/src/platform/hal/include/: hal_gpio.h
chapter_1/rust/: .gitignore  Cargo.toml  README.md  memory-nucleo.x  memory-qemu.x  ocd-run.sh
chapter_1/rust/.cargo/: config.toml
chapter_1/rust/src/: hal.rs  main.rs
chapter_1/rust/src/arch/: microbit.rs  mod.rs  nucleo_l476rg.rs
chapter_1/rust/src/arch/microbit/: gpio.rs  mod.rs  timer.rs
chapter_1/rust/src/arch/nucleo_l476rg/: gpio.rs  timer.rs
chapter_2/c/: .clang-format  README.md
chapter_2/c/src/app/: CMakeLists.txt  main.c
chapter_2/c/src/platform/: CMakeLists.txt
chapter_2/c/src/platform/arch/: CMakeLists.txt
chapter_2/c/src/platform/arch/common/: hal_event.c  hal_system.c
chapter_2/c/src/platform/arch/microbit/: CMakeLists.txt  hal_gpio.c  hal_timer.c
chapter_2/c/src/platform/arch/nucleo_l476rg/: CMakeLists.txt  hal_gpio.c  hal_timer.c
chapter_2/c/src/platform/arch/nucleo_l476rg/crt/: startup.c
chapter_2/c/src/platform/hal/: hal_event.c
chapter_2/c/src/platform/hal/include/: hal_event.h  hal_gpio.h  hal_system.h  hal_timer.h
chapter_2/c/tools/: gdb_keypress.py  qmp_keypress.py
chapter_2/rust/: Cargo.toml  build.rs  device.x
chapter_2/rust/.cargo/: config.toml
chapter_2/rust/scripts/: exti_check.gdb
chapter_2/rust/src/: debouncer.rs  event.rs  hal.rs  main.rs
chapter_2/rust/src/arch/: events.rs  mod.rs
chapter_2/rust/src/arch/microbit/: gpio.rs  mod.rs  timer.rs
chapter_2/rust/src/arch/nucleo_l476rg/: gpio.rs  mod.rs  timer.rs
chapter_2/rust/src/hal/: hal_gpio.rs  hal_timer.rs  mod.rs  utils.rs
cmake/: arm-gnu-toolchain.cmake
