[package]
name = "chapter1-hal-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", features = ["device"] }
embedded-hal = "1.0.0"
panic-halt = "0.2"
cortex-m-semihosting = { version = "0.5", optional = true }

[features]
# QEMU/micro:bit style target (thumbv6m). Uses semihosting for logging.
qemu = ["cortex-m-semihosting"]
# Nucleo-L476 style target (thumbv7em). No logging to keep it tiny.
nucleo = []

default = ["qemu"]
